--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -204,7 +204,7 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = "<animation-charging>  <label-charging>"
+format-charging = "<animation-charging>   <label-charging>"
 format-charging-prefix = " "
 format-charging-prefix-font = 1
 format-charging-prefix-foreground = ${color.BLUE}
@@ -215,7 +215,7 @@ format-charging-background = ${color.BG}
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = "<ramp-capacity>  <label-discharging>"
+format-discharging = "<ramp-capacity>   <label-discharging>"
 format-discharging-background = ${color.BG}
 
 ; Available tags:
@@ -691,7 +691,7 @@ format-disconnected-padding = 1
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
 ;label-connected = "%essid%  %downspeed%"
-label-connected = "%{A1:networkmanager_dmenu &:}%essid%%{A}"
+label-connected = "%{A1:networkmanager_dmenu &:}%essid% | %downspeed%%{A}"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -1110,9 +1110,10 @@ ramp-volume-2 = 墳
 [module/spotify]
 type = custom/script
 interval = 1
-format-prefix = "󰝚 "
+# format-prefix = "󰝚 "
 format = <label>
-exec = python $HOME/.config/polybar/scripts/spotify_status.py -f '{artist}: {song}'
+exec = exec $HOME/.config/spotify-tui/show_music_taa.sh
+;exec = python $HOME/.config/polybar/scripts/spotify_status.py -f '{artist}: {song}'
 ;control players (optional)
 ; click-left = playerctl --player=spotify play-pause:
 ; click-right = playerctl --player=spotify next
@@ -1126,12 +1127,12 @@ click-left = exec blueberry
 click-right = exec $HOME/.config/polybar/scripts/toggle_bluetooth.sh
 format-padding = 1
 format-background = ${color.BG}
-; format-foreground = #ffffff
+
 
 [module/systemtray]
 type=custom/ipc
 hook-0=echo " "
-hook-1=echo " "
+hook-1=echo " "
 click-left=$HOME/.local/bin/systray.sh
 initial=2
 format-font=2
