--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -2,11 +2,13 @@ print_info() {
     prin "\n"
     prin "\n"
     info "${cl1}os \t" distro
-    info "${cl3}kernel \t" kernel
-    info "${cl5}shell \t" shell
-    info "${cl6}wm \t" wm
-    info "${cl3}theme \t" theme
-    info "${cl5}terminal \t" term
+    info "${cl2}kernel \t" kernel
+    info "${cl3}shell \t" shell
+    info "${cl4}wm \t" wm
+    info "${cl5}theme \t" theme
+    info "${cl6}terminal \t" term
+    info "${cl7}cpu \t" cpu
+    info "${cl1}gpu \t" gpu
     prin "\n"
     info cols
 }
